--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,3 @@
-# Dockerfile
 # Stage 1: Dependencies
 FROM node:20-alpine AS deps
 WORKDIR /app
@@ -7,9 +6,8 @@ WORKDIR /app
 RUN apk add --no-cache libc6-compat
 
 # Install dependencies
-COPY package.json bun.lockb ./
-RUN npm install -g bun
-RUN bun install --frozen-lockfile
+COPY package.json package-lock.json* ./
+RUN npm ci --legacy-peer-deps
 
 # Stage 2: Builder
 FROM node:20-alpine AS builder
@@ -17,7 +15,6 @@ WORKDIR /app
 
 # Install build dependencies
 RUN apk add --no-cache libc6-compat
-RUN npm install -g bun
 
 # Copy dependencies
 COPY --from=deps /app/node_modules ./node_modules
@@ -28,7 +25,7 @@ ENV NEXT_TELEMETRY_DISABLED 1
 ENV NODE_ENV production
 
 # Build application
-RUN bun run build
+RUN npm run build
 
 # Stage 3: Runner
 FROM node:20-alpine AS runner
@@ -36,7 +33,6 @@ WORKDIR /app
 
 # Install production dependencies
 RUN apk add --no-cache libc6-compat
-RUN npm install -g bun
 
 # Create non-root user
 RUN addgroup --system --gid 1001 nodejs
@@ -61,4 +57,4 @@ EXPOSE 3000
 ENV HOSTNAME "0.0.0.0"
 
 # Start the application
-CMD ["bun", "server.js"]
+CMD ["node", "server.js"]
