--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile.prod
       target: deps
-    command: bun run dev
+    command: npm run dev
     ports:
       - "3000:3000"
     volumes:
